--- a/src/flaskr/app/templates/index.html
+++ b/src/flaskr/app/templates/index.html
@@ -16,6 +16,11 @@
 
 <div class="jumbotron">
   <h1>Mental Health Forum Analysis</h1>
-  <p class="lead">Hello! [insert short project overview] </p>
+  <p class="lead">
+      Hello! This project utilizes sentiment analysis and kmeans clustering to
+      group similar texts. Check out the About tab to read more about our process
+      and goals, the Analysis tab to see some gathered data, or the Explore tab to
+      experiment with our algorithm yourself!
+  </p>
 </div>
 {% endblock %}
