--- a/src/flaskr/app/templates/about.html
+++ b/src/flaskr/app/templates/about.html
@@ -97,17 +97,87 @@ ongoing topic of research in natural language processing. Think about it this wa
 you think we can discern whether a sentence is <font color="red">angry</font> or 
 <font color="blue">sad</font>, or maybe even <font color="purple">tentative</font>? There are 
 numerous algorithms that people much smarter than us thought of, and here we use the one by 
-IBM, called the <a href="https://www.ibm.com/watson/services/tone-analyzer/">Watson Tone Analyzer</a>.
-
+IBM, called the 
+<a href="https://www.ibm.com/watson/services/tone-analyzer/">Watson Tone Analyzer</a>. This API 
+(Application Programming Interface) allows us to be able to use someone else's algorithm in our 
+own code. Watson Tone Analyzer, for us, solved the problem of doing sentiment analysis and 
+trying to figure out a way to turn textual data into numerical data, that we could process 
+easier.
 </p>
+<p>
+For example (as taken from the <a href="https://tone-analyzer-demo.ng.bluemix.net/">
+Watson Tone Analyzer Demo</a>), we can give this algorithm a piece of text such as
+</p>
+<p><i>I hate these new features On #ThisPhone after the update.</i></p>
+<p>
+and the Watson Tone Analyzer could give us back a value such as <code>Anger: 0.64</code>, 
+indicating that their algorithm was 64% sure that anger was a sentiment that was present in 
+this piece of text. By feeding it other pieces of text data, we can effectively turn our 
+text data that we had retrieved from the mental health forum and turn it into numbers that we 
+could use.
+</p>
+
+<p><i>
+Note: For <a href="/explore.html">the demo</a>, we did not provide pieces of text from the 
+mental health forum. This is to preserve the privacy of the users on that site, and instead 
+we used the <a href="https://newsapi.org/">NewsAPI</a> site to provide us with news headlines 
+that would be more user friendly to read and probably more polar in terms of emotion, to allow 
+for a better user experience.
+</i></p>
 
 <h3>Finding Similar People</h3>
 <p>
-
+The original goal of the project was to use sentiment analysis in order to find people who were 
+writing posts of a similar sentiment in order to "match" people to other people that they could 
+talk to. Original ideas included:
 </p>
+	<ul>
+		<li>Using keyword analysis to summarize someone's piece of text</li>
+		<li>Using dates and times of postings to see if a forum's posts changed over 
+			time</li>
+		<li>Using "tagged" individuals to possibly create a graph of how users were 
+			related, and what kinds of people seemed to be helped in each form</li>
+	</ul>
+<p>
+But, as you have probably noticed, we have not reached those goals yet. As for completing this 
+goal of finding similar people, we could only use the limited data we have about the sentiments 
+of each post. This is definitely not enough information, <i><b>nor do we have the domain 
+knowledge to make an executive decision about who could be a good candidate for someone else
+</b></i>. Although we would love to be able to analyze this website further, this is about as 
+far as we got. The demo does not include actually finding similar people, although we could, 
+because of the limitation that these demos should be quick and easy to understand for the user. 
+</p>
+
+<h1>The Demo</h1>
+<p>
+The demo consists of two main portions: 1) using the drag and drop interface in order to group 
+different posts that you think have a similar sentiment, and 2) clicking "Generate Analysis" 
+and seeing how the computer managed to group them.
+</p>
+<h3>Drag and Drop Interface</h3>
+<p>
+This interface is made so that you can group the news headlines that are being presented in a 
+way that you think would be the most similar. In other words, two headlines that you think both 
+express an <font color="red">angry</font> emotion should be placed in the same group. You 
+don't have to think about this like a computer; this demonstration is for us as humans to 
+understand the differences between how computers might imagine emotions versus how us 
+as humans might think about emotions.
+</p>
+<h3>Computer's Groupings</h3>
+<p>
+This section is for understanding how the computer actually grouped them. The computer took 
+the values that the Watson Tone Analyzer from before and tried to group them in a few groups so 
+that similar values would be grouped together. Was your result different? If so, in what way? 
+The goal was simply to make you think about how computers think, so there is no right answer.
+</p>
+
 
 <h1>From Here</h1>
 <p>
-
+From here, although we're unsure of whether we can continue this project, we would like to see 
+what kinds of patterns show up in text corpuses such as these. Could an analysis like this be 
+used on a larger scale to determine what a group of individuals think? There have been many 
+projects using natural language processing, and we hope that we have inspired a few more to 
+start their own.
 </p>
 {% endblock %}
